[package]

name = "mani_sl"
version = "0.0.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/mani-sl"
description = "Your bad habit of mistyping increases good karma!"

[dependencies]
ncurses = "5"
unicode-width = "0.1"
libc = "0.2"
